# metrics

./: .dockerignore  .eslintignore  .gitignore  .zellij.kdl  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  nuxt.config.js  package-lock.json  package.json  tsconfig.json
api/: .eslintignore  Dockerfile  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
config/: custom-environment-variables.js  default.js  development.js
daemon/: Cargo.toml  Dockerfile  index.ts  package.json  test-perf.js
daemon/config/: custom-environment-variables.cjs  default.cjs  development.cjs  test.cjs
daemon/config/type/: schema.json
daemon/src/: config.js  config.ts  daily_api_metric.rs  main.rs  mongo.ts  mongo_request.rs  parse.rs  prometheus.rs  queue.rs  server.js  server.ts  service.js  service.ts  socket.rs  test_hooks.rs  types.ts  user-from-api-key.ts
dev-resources/: nginx.conf
scripts/: gen-types.js
server/: index.js  udp.js
shared/: index.js
test-it/: .eslintrc.js  00-setup.js  01-daily-api-metrics.js  01-daily-api-metrics.ts  02-user-from-api-key.ts  package-lock.json  package.json
types/: build.js  package-lock.json  package.json  schema.json  tsconfig.json
ui/: .dockerignore  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  Dockerfile  app.vue  auto-imports.d.ts  error-test.vue  error.vue  eslint.config.mjs  index.html  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  (+2 more)
ui-old/: .gitignore  app.vue  eslint.config.mjs  package.json
(+160 files in other folders)
