[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hyper = { version = "0.14.24", features = ["server"] }
jwtk = "0.2.4"
lazy_static = "1.4.0"
mongodb = "2.3.1"
mongodm = "0.9.0"
prometheus = "0.13.3"
regex = "1.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
